@@ -3,7 +3,6 @@ package org.kane.auth.security;
 import lombok.RequiredArgsConstructor;
 import org.jspecify.annotations.NonNull;
 import org.kane.database.entity.User;
-import org.kane.database.enum_types.Role;
 import org.kane.database.repository.user.UserRepository;
 import org.kane.exceptions.not_found.UserNotFoundException;
 import org.springframework.security.core.GrantedAuthority;
@@ -12,6 +11,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -22,7 +22,7 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     public CustomUserDetails loadUserByUsername(@NonNull String username) throws UserNotFoundException {
         User user = userRepository.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException(username));
-        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(Role.USER.name()), new SimpleGrantedAuthority(Role.ADMIN.name()));
+        List<GrantedAuthority> authorities = Collections.singletonList(new SimpleGrantedAuthority(user.getRole().name()));
         return new CustomUserDetails(username,user.getPassword(), authorities, user.getRole());
     }
 
